<?xml version="1.0"?>
<package format="2">
    <name>rviz_marker_visualizer</name>
    <version>0.0.0</version>
    <description>The rviz_marker_visualizer package</description>

    <maintainer email="chen@todo.todo">chen</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>

    </export>
</package>
